microservices/k8s-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: testing-yuya.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              name: http-frontend
      - path: /payment
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              name: http-payment
      - path: /review
        pathType: Prefix
        backend:
          service:
            name: review-service
            port:
              name: http-review
